fixing spacing problem

--- a/leaflet-ui/app/scripts/components/filter/projectFilter.scss
+++ b/leaflet-ui/app/scripts/components/filter/projectFilter.scss
@@ -1,24 +1,24 @@
 
 .project-search{
-  	padding-left: 20px;
-  	padding-right: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 	.project-search-actions{
-	  a{
-	  	color:#000;
-		text-decoration: none;
-	  }
+		a{
+			color:#000;
+			text-decoration: none;
+		}
 	}
-  h2{
+	h2{
 		font-size: 12px;
 		line-height:35px;
 		display: inline-block;
 
 	}
 
-  .toggle-nav{
-	display:block;
-	cursor: pointer;
-  }
+	.toggle-nav{
+		display:block;
+		cursor: pointer;
+	}
 
 	.btn-xs{
 		border:0px;
@@ -26,7 +26,7 @@
 		width:16px;
 		margin:3px;
 		margin-left:0px !important;
-	
+		
 		background-repeat: no-repeat;
 		line-height: 30px;	
 		
@@ -43,24 +43,24 @@
 	.btn-all,.btn-all:hover{
 		background-color:#FFF;
 		background:url('../../../assets/png/select_all_btn.png');
-		    margin-bottom: 5px;
+		margin-bottom: 5px;
 	}
 	.btn-clear,.btn-clear:hover{
-	  background:url('../../../assets/png/clear_btn_circle.png');
+		background:url('../../../assets/png/clear_btn_circle.png');
 	}
 
-  input[type=text] {
-	background-color: white;
-	background-image: url('../../../assets/png/find.png');
-	background-position: 8px 8px;
-	background-repeat: no-repeat;
-	padding-left: 30px !important;
-	height: 33px;
-	padding: 5px 10px;
-	font-size: 11px;
-	line-height: 11px;
-	border-radius: 3px;
-  }
+	input[type=text] {
+		background-color: white;
+		background-image: url('../../../assets/png/find.png');
+		background-position: 8px 8px;
+		background-repeat: no-repeat;
+		padding-left: 30px !important;
+		height: 33px;
+		padding: 5px 10px;
+		font-size: 11px;
+		line-height: 11px;
+		border-radius: 3px;
+	}
 }
 
 
@@ -73,46 +73,50 @@
 }
 
 .project-search-results{
-  display: table;
+	display: table;
 }
 .row{
-  display: table-row;
-  	font-size: 12px;
- 	 color: #000;
+	display: table-row;
+	font-size: 12px;
+	color: #000;
 	width: 100%;
 
-  .col1{
-	display: table-cell;
-	width: 20px;
-	height: 20px;
-	text-align: center;
+	.col1{
+		display: table-cell;
+		width: 20px;
+		height: 20px;
+		text-align: center;
 
-  }
+	}
 
-  .col2{
-	display: table-cell;
-  }
+	.col2{
+		display: table-cell;
+	}
 
-  .selectable{
-	position: absolute;
-	float: left;
-	cursor: pointer;
-  }
-  .item-text{
-	float: left;
-	cursor: pointer;
-  }
+	.selectable{
+		position: absolute;
+		float: left;
+		cursor: pointer;
+	}
+	.item-text{
+		float: left;
+		cursor: pointer;
+	}
 }
 
 .project-search-actions{
 	padding-bottom: 10px;
 	span{
-	  margin: 2px;
+
+		margin: 5px;
 	}
-  >a{
+	>a{
+	  padding: 3px;
 		font-size: 13px;
 		margin-bottom: 15px;
 		padding-left: 0px;
+
+	  span{margin: 0px}
 	}
 }
 
